# cq_free_server

./: .gitignore  Cargo.toml  README.md  angular.json  build.rs  package.json  pnpm-lock.yaml  tailwind.config.js
.angular/cache/17.3.12/cq_free_server/: .tsbuildinfo
.angular/cache/18.2.14/cq_free_server/: .tsbuildinfo
.angular/cache/19.1.8/cq_free_server/: .tsbuildinfo
.github/workflows/: rust.yml
src/: bhbbk.rs  index.html  lib.rs  main.rs  main.ts  styles.css  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts  app.routes.ts
src/app/components/date-picker/: date-picker.component.html  date-picker.component.scss  date-picker.component.ts
src/app/components/date-time-picker/: date-time-picker.component.html  date-time-picker.component.spec.ts  date-time-picker.component.ts
src/app/components/header/: header.component.css  header.component.html  header.component.ts
src/app/components/sidebar-menu/: sidebar-menu.component.css  sidebar-menu.component.html  sidebar-menu.component.ts
src/app/components/time-picker/: time-picker.component.html  time-picker.component.scss  time-picker.component.ts
src/app/pages/dashboard/: dashboard.component.css  dashboard.component.html  (+1 more)
src/app/pipe/: abbreviate.pipe.ts  file-size.pipe.ts  time-ago.pipe.ts  truncate.pipe.ts
src/app/service/: sidebar.service.ts
ui/: app-window.slint
ui/components/: gly_button.slint  gly_table_view.slint  gly_tabs.slint
(+27 files in other folders)
