[package]
name = "cq_free_server"
version = "0.1.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opener = "0.7.2"
reqwest = "0.12.9"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
slint = "1.9.1"
tokio = { version = "1.42.0", features = ["full"] }

[build-dependencies]
slint-build = "1.9.1"
