[package]
name = "cq_free_server"
version = "0.1.3"
edition = "2024"
authors = ["Pang <pangyuyu@email.cn>"]
description = "The current version of this software serves as a web crawler, designed to crawl resources from the '萝卜版本库'. In the future, it is planned to evolve into a version control repository. The primary purpose of this software is to serve as a demo for learning Slint"
license = "MIT"
repository = "https://github.com/xsxz01/cq_free_server"
readme = "README.md"
homepage = "https://www.iotlearn.cn/"
keywords = ["slint", "cq_free_server", "web-crawler"]
categories = ["web-crawler", "slint"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opener = "0.7.2"
reqwest = "0.12.10"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
slint = "1.9.1"
tokio = { version = "1.42.0", features = ["full"] }

[build-dependencies]
slint-build = "1.9.1"
